--- a/templates/users/planning/base.html.twig
+++ b/templates/users/planning/base.html.twig
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% include 'Users/head.html.twig' %}
+    {% include 'users/head.html.twig' %}
 <body id="page-top">
 
 <!-- Page Wrapper -->
 <div id="wrapper">
-    {% include 'Users/sidebar.html.twig' %}
+    {% include 'users/sidebar.html.twig' %}
         <!-- Main Content -->
         <div id="content">
-            {% include 'Users/navigation.html.twig' %}
+            {% include 'users/navigation.html.twig' %}
             <!-- Begin Page Content -->
             <div class="jumbotron pt-1">
 
                 <!-- Page Heading -->
                 <div class="mb-1">
-                    <h5 class="h5 mb-0 text-gray-800">Planificiation</h5>
+                    <h5 class="h5 mb-0 text-gray-800">planning</h5>
                 </div>
 
-                {% include 'Users/Planificiation/calendar.html.twig' %}
+                {% include 'users/planning/calendar.html.twig' %}
 
             </div>
             <!-- /.container-fluid -->
@@ -46,7 +46,7 @@
     <i class="fas fa-angle-up"></i>
 </a>
 
-{% include 'Users/Planificiation/script.html.twig' %}
+{% include 'users/planning/script.html.twig' %}
 
 </body>
 
