--- a/templates/users/base.html.twig
+++ b/templates/users/base.html.twig
@@ -20,56 +20,56 @@
             <div class="main">
               <!-- Content Row -->
                 <div class="row">
-                    <!-- Nombre de stream crée Card Example -->
+                    <!-- Nombre favoris Card Example -->
                     <div class="col-xl-3 col-md-6">
                     <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
                         <div class="row">
                             <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
-                            <div class="text-principal justify-content-center">Nombre de stream crée</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbStream"></div>
+                            <div class="text-principal justify-content-center">Nombre favoris</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbFavoris"></div>
                             </div>
                         </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Nombre de mise en favoris Card Example -->
+                <!-- Nombre d’ecoutes Card Example -->
                 <div class="col-xl-3 col-md-6">
                   <div class="card shadow h-80 border-raduis py-2">
                       <div class="card-body">
                       <div class="row">
                           <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
-                          <div class="text-bleue">Nombre de mise en favoris</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbFavoris"></div>
+                          <div class="text-bleue">Nombre d’ecoutes</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbEcoute"></div>
                           </div>
                       </div>
                       </div>
                   </div>
                 </div>
 
-                <!-- Total d'écoutes Card Example -->
+                <!-- Total de plannification -->
                 <div class="col-xl-3 col-md-6">
                   <div class="card shadow h-80 border-raduis py-2">
                     <div class="card-body">
                       <div class="row">
                         <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
-                          <div class="text-turquoise">Total d'écoutes</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800" id="ecouteGlobal"></div>
+                          <div class="text-turquoise">Total de plannification</div>
+                          <div class="h5 mb-0 font-weight-bold text-gray-800" id="nbPlan"></div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
 
-                <!-- Pending Requests Card Example -->
+                <!-- Nombre de stream Card Example -->
                 <div class="col-xl-3 col-md-6">
                   <div class="card shadow h-80 border-raduis py-2">
                     <div class="card-body">
                         <div class="row">
                             <div class="col mr-2 d-flex flex-column align-items-center justify-content-center">
-                              <div class="text-purple">Nombre de stream planifié</div>
-                              <div class="h5 font-weight-bold text-gray-800" id="nbPlaning"></div>
+                              <div class="text-purple">Nombre de stream créée</div>
+                              <div class="h5 font-weight-bold text-gray-800" id="nbStream"></div>
                             </div>
                         </div>
                     </div>
@@ -84,8 +84,8 @@
                   <div class="col-xl-8 col-lg-7">
                     <div class="card shadow mb-4">
                       <!-- Card Header - Dropdown -->
-                      <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-primary">Nombre d'écoutes par mois</h6>
+                      <div class="card-header d-flex flex-row align-items-center justify-content-between">
+                            <h6 class="text-purple mt-2">Nombre d’écoute par mois</h6>
                       </div>
                       <!-- Card Body -->
                       <div class="card-body">
@@ -99,9 +99,9 @@
                   <div class="col-xl-4 col-lg-5">
                     <div class="card shadow mb-4">
                       <!-- Card Header - Dropdown -->
-                      <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-purple">Nombre d'ecoutes par jour</h6>
-                      </div>
+                      <div class="card-header d-flex flex-row align-items-center justify-content-between">
+                            <h6 class="text-purple mt-2">Nombre d’abonnements par jour</h6>
+                        </div>
                       <!-- Card Body -->
                       <div class="card-body">
                         <div class="chart-pie pt-4 pb-2">
