--- a/templates/users/settings/base.html.twig
+++ b/templates/users/settings/base.html.twig
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="main d-flex flex-column align-items-center justify-content-center">
-                    <div class="row col-xl-12 alert alert-success"  style="display: none;" id="mycompte" role="alert"></div>
+                    <div class="text-center row col-xl-12 alert alert-success"  style="display: none;" id="mycompte" role="alert"></div>
 
                     <!--img logo-->
                     <div class="image-upload">
@@ -61,7 +61,7 @@
                     <!-- Divider -->
                     <hr class="sidebar-divider my-0 w-100 mb-5">
                 <form>
-                    <div class="row col-xl-12 alert alert-success" style="display: none;" id="mychannels" role="alert">
+                    <div class="text-center row col-xl-12 alert alert-success" style="display: none;" id="mychannels" role="alert">
                          
                     </div>
 
@@ -97,7 +97,7 @@
                 <hr class="sidebar-divider my-0 w-100 mb-5">
 
                 <form>
-                    <div class="row col-xl-12 alert alert-success"  style="display: none;" id="mypassword" role="alert">
+                    <div class="text-center row col-xl-12 alert alert-success"  style="display: none;" id="mypassword" role="alert">
                          
                     </div>
 
