--- a/templates/users/sidebar.html.twig
+++ b/templates/users/sidebar.html.twig
@@ -3,7 +3,7 @@
 
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('setting.index') }}">
-        <div class="sidebar-brand-text mx-2" id="myname"> {#{ user.username }#}</div>
+        <div class="sidebar-brand-text mx-2" id="myname"></div>
         <i class="fas fa-fw far fa-edit" id="edit-profil"></i>
     </a>
 
@@ -25,7 +25,7 @@
     </li>
     <!-- Nav Item - Planning -->
     <li class="nav-item active d-flex align-items-center justify-content-center">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{#{ path('profile.planning.index') }#}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('profile.planning.index') }}">
             <span>Planification</span>
         </a>
     </li>
