--- a/templates/pages/script.html.twig
+++ b/templates/pages/script.html.twig
@@ -101,7 +101,7 @@ $(document).ready(function() {
 
         }).fail((error)=>{
             console.log(error);
-        });
+        }); //fin radio
 
     
 
