--- a/templates/users/planning/base.html.twig
+++ b/templates/users/planning/base.html.twig
@@ -14,7 +14,7 @@
 
                 <!-- Page Heading -->
                 <div class="mb-1">
-                    <h5 class="h5 mb-0 text-gray-800">planning</h5>
+                    <h4 class="h3 mb-0 text-gray-800">Planning</h4>
                 </div>
 
                 {% include 'users/planning/calendar.html.twig' %}
