--- a/templates/users/musicLibrary/base.html.twig
+++ b/templates/users/musicLibrary/base.html.twig
@@ -24,7 +24,7 @@
                                     </a>
                                 </div>
                                 <div class="col-sm-4">
-                                    <h4 class="text-black mt-auto" id="titreBibliotheque">Bibliothèque de musiques</h4>
+                                    <h4 class="text-dark-color mt-auto" id="titreBibliotheque">Bibliothèque de musiques</h4>
                                 </div>
                                 <div class="col-sm-4 d-flex justify-content-end mt-2">
                                     <label for="musicInput" class="bouton-ajout">
@@ -35,21 +35,27 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="mt-3">
+                    <div class="mt-3 row">
                           <div class="col-xl-12">
                             <div class="card shadow mb-4">
                                 <!-- Card Body -->
                                 <div class="card-body music">
-                                    <div class="row">
-                          
-                                                <div class="col-xl-4 d-flex flex-column">
-                                                    <a href="#">
-                                                        <button class="bouton-id">&times;</button>
-                                                        <img src="https://i.pinimg.com/736x/06/2a/2c/062a2c6142605b83c340080137b84e57.jpg" alt="music" style="margin-left: 5px;" class="w-100"/>
-                                                        <span class="text-dark medium w-100 text-center" style="font-size: 0.6rem;"></span>
-                                                    </a>
-                                                </div>
-                                        
+                                    <div class="row mr-0 ml-0 text-center text-lg-left" id="mySong">
+
+                                        <!--<div class="col-lg-3 col-md-4 col-6" >
+                                            <a href="#" class="d-block mb-4 h-100">
+                                                <img src="https://i.pinimg.com/736x/06/2a/2c/062a2c6142605b83c340080137b84e57.jpg" class="img-fluid img-thumbnail music">
+                                                <p class="text-center">music mp3</p>
+                                                <span class="delete">&times;</span>
+                                            </a>
+                                        </div>
+                                        <div class="col-lg-3 col-md-4 col-6" >
+                                            <a href="#" class="d-block mb-4 h-100">
+                                                <img src="https://i.pinimg.com/736x/06/2a/2c/062a2c6142605b83c340080137b84e57.jpg" class="img-fluid img-thumbnail music">
+                                                <p class="text-center">music mp3</p>
+                                                <span class="delete">&times;</span>
+                                            </a>
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
